crates/solite-cli/src/commands/tui/snapshots/solite__commands__tui__test_tui__tests__Back to listing.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
snapshot_kind: text
---
"Listing                            Solite TUI                          q to quit"
"                           ┌Tables in ──────────────┐                           "
"                           │❱  1 t                  │                           "
"                           │   2 t2                 │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           │                        │                           "
"                           └────────────────────────┘                           "
