crates/solite-cli/src/commands/tui/snapshots/solite__commands__tui__test_tui__tests__empty table.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
---
"empty (0 rows)                       Solite                       ? help  q quit"
"a                                        b                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"   h/j/k/l navigate  Enter view row  [ sort asc  ] desc  │    y/c copy  q back  "
