crates/solite-cli/src/commands/tui/snapshots/solite__commands__tui__test_tui__tests__enter - table view.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
snapshot_kind: text
---
"t (1+ row)                           Solite                       ? help  q quit"
"a                          b                          c                         "
"                         1 asdf                       3.53.0                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                 Row 1 of 1+ ⠋                                  "
"────────────────────────────────────────────────────────────────────────────────"
"   h/j/k/l navigate  Enter view row  [ sort asc  ] desc  │    y/c copy  q back  "
