crates/solite-cli/src/commands/tui/snapshots/solite__commands__tui__test_tui__tests__help overlay listing.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
---
"                                     Solite                       ? help  q quit"
"                        ┌1 table───────────────────────┐                        "
"                        │›  1 t                        │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                    ┌ Help — Tables ───────────────────────┐                    "
"                    │          j/k  navigate               │                    "
"                    │          g/G  first/last table       │                    "
"                    │          1-9  jump                   │                    "
"                    │        Enter  open                   │                    "
"                    │            ?  help                   │                    "
"                    │        q/Esc  quit                   │                    "
"                    │ press ? or Esc to close              │                    "
"                    └──────────────────────────────────────┘                    "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        └──────────────────────────────┘                        "
"────────────────────────────────────────────────────────────────────────────────"
"                 j/k navigate  1-9 jump  Enter open  q/Esc quit                 "
