crates/solite-cli/src/commands/tui/snapshots/solite__commands__tui__test_tui__tests__listing page.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
snapshot_kind: text
---
"                                     Solite                       ? help  q quit"
"                        ┌2 tables──────────────────────┐                        "
"                        │›  1 t                        │                        "
"                        │   2 t2                       │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        │                              │                        "
"                        └──────────────────────────────┘                        "
"────────────────────────────────────────────────────────────────────────────────"
"                 j/k navigate  Enter open  1-9 jump  │    q quit                "
